--- a/oblig2.html
+++ b/oblig2.html
@@ -14,6 +14,31 @@
 
 <main> 
 
+    <div class="Bilde boks" id="box1">
+        <h2>Magnolia</h2>
+        <figure>
+          <img src="assets/magnolia.jpg" alt="magnolia">
+          <figcaption>
+           
+          </figcaption>
+        </figure>
+        <p>
+          <span>Magnolia grandiflora</span>, 
+        </p>
+      </div>
+    
+      <div class="plant-box" id="box2">
+        <h2>Ranunculus</h2>
+        <figure>
+          <img src="assets/ranunculus.jpg" alt="ranunculus">
+          <figcaption>
+            Ranunculus asiaticus (Persian Buttercup)
+          </figcaption>
+        </figure>
+        <p>
+          <span>Ranunculus asiaticus (Persian Buttercup)</span> 
+        </p>
+      </div>
 
 
 
