Startet på Mobil layout1 skrev navn på css

--- a/oblig2 mobil.html
+++ b/oblig2 mobil.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="mobil_layout1.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,20 +15,21 @@
 <main> 
 
       <div class="bilde-boks" id="box1">
-        <h2>Ranunculus</h2>
+        <h2>5 Second Of Summer</h2>
         <figure>
           <img src="Images/5secondsofsummer.jfif" alt="ranunculus">
           <figcaption>
-            Ranunculus asiaticus (Persian Buttercup)
+            5 Second Of Summer
           </figcaption>
         </figure>
         <p>
-          <span>Ranunculus asiaticus (Persian Buttercup)</span> 
+          En av de første tingen jeg gjorde var å dra på konsert med <span>5 Second Of Summer</span>. 5 Second Of Summer er et pop-rock boy band fra Australia. På starten av sommerferien kom de 5 guttene til Telenor Arena. 
+          Dette var et av mine fineste opplevelse, siden jeg hadde gledet meg hele året. 
         </p>
       </div>
 
       <div class="bilde-boks" id="box2">
-        <h2>Magnolia</h2>
+        <h2>Kule gutten</h2>
         <figure>
           <img src="/Images/klasse.jfif" alt="Gutt med surfebrett">
           <figcaption>
@@ -35,12 +37,13 @@
           </figcaption>
         </figure>
         <p>
-          <span>Magnolia grandiflora</span>, 
+          Her ser dere bildet av <span>lillebroren min</span>, med et surfebrett. 
+          Dette er bildet av når vi var på ferie i Wellfleet,Massachusetts
         </p>
       </div>
 
       <div class="bilde-boks" id="box3">
-        <h2>Magnolia</h2>
+        <h2>Stranden</h2>
         <figure>
           <img src="Images/Strand.jpg" alt="Strand">
           <figcaption>
@@ -48,7 +51,8 @@
           </figcaption>
         </figure>
         <p>
-          <span>Magnolia grandiflora</span>, 
+          <span>Stranden i Wellfleet</span>, var et av de fineste standene jeg har besøkt. 
+          havet var blått og det var veldig fint her de to ukene vi var der. 
         </p>
       </div>
 
