Har laget en HTML til min CSS fil og begynt.

--- a/oblig2_PC1.html
+++ b/oblig2_PC1.html
@@ -3,16 +3,14 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>html template</title>
- <link rel="stylesheet" href="mobil_layout1.css">
-  
+  <title>Sommer 2021</title>
+ <link rel="stylesheet" href="PC_layout1.css">
 </head>
 
 <body>
  
 <main>
   <h1>Sommer 2021</h1>
-  
 
   <div class="boks-tekst" id="box1">
     
@@ -28,15 +26,15 @@
     <h2>Kule gutten</h2>
     <img src="Images/klasse.jfif" alt="Gutt med surfebrett på strand">
     <p> Her ser dere bildet av lillebroren min, med et surfebrett. 
-        Dette er bildet av stranden i Wellfleet, Massachusetts
+        Dette bildet er tatt på stranden i Wellfleet, Massachusetts
     </p>
   </div>
 
   <div class="boks-tekst" id="box3">
     <h2>Stranden</h2>
     <img src="Images/Strand.jpg" alt="Bilde av strand">
-    <p> <span>Stranden i Wellfleet</span>, var et av de fineste standene jeg har besøkt. 
-        havet var blått og det var veldig fint her de dagene vi var på besøk.
+    <p> <span>Stranden i Wellfleet</span>, var et av de fineste stedene jeg har besøkt. 
+        Havet var blått og det var veldig fint her de dagene vi var på besøk.
     </p>
   </div>
 
@@ -44,7 +42,7 @@
     <h2>Kornåker</h2>
     <img src="Images/kornåker.jfif" alt="Bilde av en kornåker">
     <p> <span>Bildet av kornåker</span>, denne åkeren 
-      ligger i Nord Amerika og er et av stedene vi besøkte på vår reise i USA.
+      ligger i Nord Amerika og er et av stedene vi besøkte på reisen vår i USA.
 
     </p>
   </div>
@@ -52,7 +50,7 @@
   <div class="boks-tekst" id="box5">
     <h2>Is</h2>
     <img src="Images/isane.jfif" alt="Bilde av iskrem">
-    <p> Det ble spist mye av <span>Is</span> i sommer, derfor passer det perfekt å ha det med. 
+    <p> Det ble spist mye <span>Is</span> i sommer, derfor passer det perfekt å ha med et bilde av en av de bedre. 
 
     </p>
   </div>
@@ -60,10 +58,13 @@
   <div class="boks-tekst" id="box6">
     <h2>Skogen</h2>
     <img src="Images/soliskogen.jfif" alt="Bilde av en flott skog der solen skinner gjennom">
-    <p>  Det her er bildet av en <span>skog</span> i Norge.  
+    <p>  Det her er bildet av en flott <span>skog</span> i Norge.  
     </p>
   </div>
 </main>
+<footer>
+    <p> Her legger vi lenken til sketchene som må åpnes i nytt vindu </p>
+    </footer>
 </body>
 
 </html>
