Gjorde noen forandringer

--- a/oblig2 mobil.html
+++ b/oblig2 mobil.html
@@ -64,6 +64,9 @@
     </p>
   </div>
 </main>
+<footer>
+  <p> Her legger vi lenken til sketchene som må åpnes i nytt vindu </p>
+  </footer>
 </body>
 
 </html>
