--- a/oblig2.html
+++ b/oblig2.html
@@ -16,13 +16,13 @@
 <div class="container">
 
 
-<main>
+  
   <div class="boks-tekst" id="box1">
     
     <h2>5 seconds of summer</h2>
       <img src="images/5secondsofsummer.jfif" alt="5 Seconds of summer spiller konsert">
   
-    <p> Her er det bildet av <span> 5 Second of Summer</span>. <span>5 Second Of Summer</span>. 
+    <p> Her er det bildet av  5 Second of Summer. 5 Second Of Summer. 
         er et pop-rock boy band fra Australia.
     </p>
   </div>
@@ -34,19 +34,21 @@
         Dette bildet er tatt på stranden i Wellfleet, Massachusetts
     </p>
   </div>
+  
 
   <div class="boks-tekst" id="box3">
     <h2>Stranden</h2>
     <img src="Images/Strand.jpg" alt="Bilde av strand">
-    <p> <span>Stranden i Wellfleet</span>, var et av de fineste stedene jeg har besøkt. 
+    <p> Stranden i Wellfleet, var et av de fineste stedene jeg har besøkt. 
         Havet var blått og det var veldig fint her de dagene vi var på besøk.
     </p>
   </div>
 
   <div class="boks-tekst" id="box4">
     <h2>Kornåker</h2>
+    
     <img src="Images/kornåker.jfif" alt="Bilde av en kornåker">
-    <p> <span>Bildet av kornåker</span>, denne åkeren 
+    <p> Bildet av kornåker, denne åkeren 
       ligger i Nord Amerika og er et av stedene vi besøkte på reisen vår i USA.
 
     </p>
@@ -55,7 +57,7 @@
   <div class="boks-tekst" id="box5">
     <h2>Is</h2>
     <img src="Images/isane.jfif" alt="Bilde av iskrem">
-    <p> Det ble spist mye <span>Is</span> i sommer, derfor passer det perfekt å ha med et bilde av en av de bedre. 
+    <p> Det ble spist mye Is i sommer, derfor passer det perfekt å ha med et bilde av en av de bedre. 
 
     </p>
   </div>
@@ -63,10 +65,10 @@
   <div class="boks-tekst" id="box6">
     <h2>Skogen</h2>
     <img src="Images/soliskogen.jfif" alt="Bilde av en flott skog der solen skinner gjennom">
-    <p>  Det her er bildet av en flott <span>skog</span> i Norge.  
+    <p>  Det her er bildet av en flott skog i Norge.  
     </p>
   </div>
-</main>
+
 </div>
 <footer>
     <p> Her legger vi lenken til sketchene som må åpnes i nytt vindu </p>
