--- a/oblig2 mobil.html
+++ b/oblig2 mobil.html
@@ -19,7 +19,7 @@
     <h2>5 seconds of summer</h2>
       <img src="images/5secondsofsummer.jfif" alt="5 Seconds of summer spiller konsert">
   
-    <p> Her er det bildet av <span> 5 Second of Summer</span>. <span>5 Second Of Summer</span>. 
+    <p> Her er det bildet av 5 Second of Summer. 5 Second Of Summer. 
         er et pop-rock boy band fra Australia.
     </p>
   </div>
@@ -35,7 +35,7 @@
   <div class="boks-tekst" id="box3">
     <h2>Stranden</h2>
     <img src="Images/Strand.jpg" alt="Bilde av strand">
-    <p> <span>Stranden i Wellfleet</span>, var et av de fineste standene jeg har besøkt. 
+    <p> Stranden i Wellfleet, var et av de fineste standene jeg har besøkt. 
         havet var blått og det var veldig fint her de dagene vi var på besøk.
     </p>
   </div>
@@ -43,7 +43,7 @@
   <div class="boks-tekst" id="box4">
     <h2>Kornåker</h2>
     <img src="Images/kornåker.jfif" alt="Bilde av en kornåker">
-    <p> <span>Bildet av kornåker</span>, denne åkeren 
+    <p> Bildet av kornåker, denne åkeren 
       ligger i Nord Amerika og er et av stedene vi besøkte på vår reise i USA.
 
     </p>
