la til bilde og forandret på min width

--- a/oblig2.html
+++ b/oblig2.html
@@ -34,7 +34,11 @@
 
   <div class="boks-tekst" id="box2">
     <h2>Kule gutten</h2>
-    <img src="images/klasse.jfif" alt="Gutt med surfebrett på strand">
+    <picture>
+    <source media="(min-width:6500px)" srcset="images/surfe-pc.jpg">
+    <source media="(min-width:465px)" srcset="images/surfe-mobil.jpg">
+    <img src="images/surfe-mobil.jpg" alt="Gutt med surfebrett på strand">
+  </picture>
     <p> Her ser dere bildet av lillebroren min, med et surfebrett. 
         Dette bildet er tatt på stranden i Wellfleet, Massachusetts
     </p>
