Co-authored-by: Miskiyu <Miskiyu@users.noreply.github.com>

--- a/oblig2 copy.html
+++ b/oblig2 copy.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Sommer 2021</title>
- <link rel="stylesheet" href="oblig2.css">
+ <link rel="stylesheet" href="mobil_layout1.css">
 </head>
 
 <body>
@@ -35,8 +35,7 @@
   <div class="boks-tekst" id="box2">
     <h2>Kule gutten</h2>
     <picture>
-    <source media="(min-width:500px)" 
-            srcset="Images/Surfer/Surfe 1500.jpg 1000w">
+    <source media="(min-width:500px)" srcset="Images/Surfer/Surfe 1500.jpg">
     <img src="Images/Surfer/Surfe mobil 460.jpg" alt="Gutt med surfebrett på strand">
   </picture>
     <p> Her ser dere bildet av lillebroren min, med et surfebrett. 
