--- a/oblig2.html
+++ b/oblig2.html
@@ -21,10 +21,11 @@
     <div class="boks-tekst" id="box1">
 
       <h2>5 seconds of summer</h2>
+
       <picture>
-        <source media="(min-width:650px)" srcset="images/5secondsofsummer.jfif">
-        <source media="(min-width:465px)" srcset="images/5secondsofsummer.jfif">
-        <img src="images/5secondsofsummer.jfif" alt="Boy-band" style="width:120;">
+        <source media="(min-width:500px)" srcset="images/konsert/Konsert 500.jpg">
+        <source srcset="Images/konsert/Konsert beskjært mobil 460.jpg">
+        <img src="Images/konsert/Konsert beskjært mobil 460.jpg" alt="En konsert">
       </picture>
 
       <p> Her er det bildet av 5 Second of Summer. 5 Second Of Summer.
@@ -34,19 +35,27 @@
     </div>
 
     <div class="boks-tekst" id="box2">
-      <h2>Kule gutten</h2>
+      <h2>Surfe gutten</h2>
+
       <picture>
-        <source media="(min-width: 500px)" srcset="Images/Surfer/Surfe 1500.jpg">
-        <img src="Images/Surfer/Surfe mobil 460.jpg" alt="Gutt med surfebrett på strand">
+        <source media="(min-width: 500px)" srcset="Images/Surfer/Surfe 460.jpg">
+        <source srcset="Images/Surfer/Surfe mobil 460.jpg">
+        <img src="Images/Surfer/Surfe mobil 460.jpg" alt="Gutt surfer i bølger">
       </picture>
-      <p> Her ser dere bildet av lillebroren min, med et surfebrett.
+
+      <p> Her ser dere bildet av lillebroren min, på et surfebrett.
         Dette bildet er tatt på stranden i Wellfleet, Massachusetts
       </p>
     </div>
 
     <div class="boks-tekst" id="box3">
       <h2>Stranden</h2>
-      <img src="images/Strand.jpg" alt="Boy-band">
+
+      <picture>
+        <source media="(min-width:500px)" srcset="Images/Strand/Strand 500.jpg">
+        <source srcset="Images/Strand/Strand beskjært mobil 460.jpg">
+        <img src="Images/Strand/Strand beskjært mobil 460.jpg" alt="En strand">
+      </picture>
 
 
       <p> Stranden i Wellfleet, var et av de fineste stedene jeg har besøkt.
@@ -57,7 +66,12 @@
     <div class="boks-tekst" id="box4">
       <h2>Kornåker</h2>
 
-      <img src="images/kornåker.jfif" alt="Bilde av en kornåker">
+      <picture>
+        <source media="(min-width:500px)" srcset="Images/Kornåker/Kornåker 500.jpg">
+        <source srcset="Images/Kornåker/Kornåker beskjært mobil 460.jpg">
+        <img src="Images/Kornåker/Kornåker beskjært mobil 460.jpg" alt="Bilde av en kornåker">
+      </picture>
+
       <p> Bildet av kornåker, denne åkeren
         ligger i Nord Amerika og er et av stedene vi besøkte på reisen vår i USA.
 
@@ -66,7 +80,17 @@
 
     <div class="boks-tekst" id="box5">
       <h2>Is</h2>
-      <img src="images/isane.jfif" alt="Bilde av iskrem">
+
+      <picture>
+        <source media="(min-width:500px)" srcset="Images/Iskrem/Iskrem_500.jpg 500w,
+                        Images/Iskrem/Iskrem_1000.jpg 1000w,
+                        Images/Iskrem/Iskrem_1500.jpg 1500w">
+
+        <source srcset="Images/Iskrem/Iskrem_mobil_460.jpg 460w,
+                        Images/Iskrem/Iskrem_mobil_1000.jpg 1000w">
+        <img src="Images/Iskrem/Iskrem_mobil_460.jpg" alt="Bilde av en iskrem">
+      </picture>
+
       <p> Det ble spist mye Is i sommer, derfor passer det perfekt å ha med et bilde av is.
 
       </p>
@@ -74,7 +98,14 @@
 
     <div class="boks-tekst" id="box6">
       <h2>Skogen</h2>
-      <img src="images/soliskogen.jfif" alt="Bilde av en flott skog der solen skinner gjennom">
+
+      <picture>
+        <source media="(min-width:500px)" srcset="Images/Sol i skog/Sol i skog 500.jpg">
+        <source srcset="Images/Sol i skog/Sol i skog beskjært mobil 460.jpg">
+        <img src="Images/Sol i skog/Sol i skog beskjært mobil 460.jpg"
+          alt="Bilde av sollyset som bryter gjennom i en skog">
+      </picture>
+
       <p> Det her er bildet av en flott skog i Norge. Denne skogen her pleide jeg å gå til når det ble for mye og når
         jeg trengte å klarere tankene mine i sommerferien.
       </p>
