--- a/reflextion.html
+++ b/reflextion.html
@@ -53,10 +53,10 @@
     Etter en stund i feilsøkingen fant vi ut at vi manglet en kode i “headen” som brukes når viewporten 
     endrer seg i størrelse og bilder også da skal endre størrelse eller byttes ut(?). Det 
     var iallefall en kode alle eksemplene og videoene med eksempler på Youtube brukte. 
-    Men når vi endret på dette, så endret heller ikke bildene. Etter flere feilsøkning så
-    bestemte vi oss å endre bildestørrelsen til bildene. Det visste seg at problemet vår
-    var i selve bildestørrelsen, når vi satte alle bildene i samme størrelse så klarte vi
-    å forandre bildet størrelsen til bildene når skjermen ble større og når skjermen ble
+    Men når vi endret på dette, så endret heller ikke bildene. Etter flere forsøk med feilsøkning så
+    bestemte vi oss for å endre bildestørrelsen til bildene. Det viste seg at problemet
+    var i selve bildestørrelsen. Når vi satte alle bildene i samme størrelse, så klarte vi
+    å forandre størrelsen til bildene når skjermen ble større og når skjermen ble
     mindre. Men det som skjedde her var at bildene til big screen ikke ble veldig fine.
    
      
