prøvde å fikse skogbildet

--- a/oblig2 endeligversion.html
+++ b/oblig2 endeligversion.html
@@ -47,8 +47,8 @@
     <div class="boks">
       <h2>Skog</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="/images/Sol i skog/nick-linnen-BZA57kzqang-unsplash-orginal.jpg" />
-        <img src="/images/Sol i skog/nick-linnen-BZA57kzqang-unsplash-orginal.jpg">
+        <source media="(min-width: 704px)" srcset="Images/Sol i skog/nick-linnen-BZA57kzqang-unsplash-orginal.jpg" />
+        <img src="Images/Sol i skog/nick-linnen-BZA57kzqang-unsplash-mobil lav.jpg" alt="Bilde av at solen skinner gjennom skogen">
       </picture>
       <div class="tekst-boks">
 
