--- a/oblig2.html
+++ b/oblig2.html
@@ -1,119 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sommer 2021</title>
-  <link rel="stylesheet" href="oblig2.css">
+  <link rel="stylesheet" href="stylesheet.css">
+  <title>Document</title>
 </head>
 
 <body>
-
   <header>
     <h1>Sommer 2021</h1>
   </header>
 
   <div class="container">
-
-
-
-    <div class="boks-tekst" id="box1">
-
-      <h2>5 seconds of summer</h2>
-
-      <picture>
-        <source media="(min-width:500px)" srcset="images/konsert/Konsert 500.jpg">
-        <source srcset="Images/konsert/Konsert beskjært mobil 460.jpg">
-        <img src="Images/konsert/Konsert beskjært mobil 460.jpg" alt="En konsert">
-      </picture>
-
-      <p> Her er det bildet av 5 Second of Summer. 5 Second Of Summer.
-        er et pop-rock boy band fra Australia. Disse fire guttene
-        her kom til Telenor arena på starten av sommerferien.
-      </p>
-    </div>
-
-    <div class="boks-tekst" id="box2">
-      <h2>Surfe gutten</h2>
-
-      <picture>
-        <source media="(min-width: 500px)" srcset="Images/Surfer/Surfe 460.jpg">
-        <source srcset="Images/Surfer/Surfe mobil 460.jpg">
-        <img src="Images/Surfer/Surfe mobil 460.jpg" alt="Gutt surfer i bølger">
-      </picture>
-
-      <p> Her ser dere bildet av lillebroren min, på et surfebrett.
-        Dette bildet er tatt på stranden i Wellfleet, Massachusetts
-      </p>
-    </div>
-
-    <div class="boks-tekst" id="box3">
-      <h2>Stranden</h2>
-
-      <picture>
-        <source media="(min-width:500px)" srcset="Images/Strand/Strand 500.jpg">
-        <source srcset="Images/Strand/Strand beskjært mobil 460.jpg">
-        <img src="Images/Strand/Strand beskjært mobil 460.jpg" alt="En strand">
-      </picture>
-
-
-      <p> Stranden i Wellfleet, var et av de fineste stedene jeg har besøkt.
-        Havet var blått og det var veldig fint her de dagene vi var på besøk.
-      </p>
-    </div>
-
-    <div class="boks-tekst" id="box4">
-      <h2>Kornåker</h2>
-
-      <picture>
-        <source media="(min-width:500px)" srcset="Images/Kornåker/Kornåker 500.jpg">
-        <source srcset="Images/Kornåker/Kornåker beskjært mobil 460.jpg">
-        <img src="Images/Kornåker/Kornåker beskjært mobil 460.jpg" alt="Bilde av en kornåker">
-      </picture>
-
-      <p> Bildet av kornåker, denne åkeren
-        ligger i Nord Amerika og er et av stedene vi besøkte på reisen vår i USA.
-
-      </p>
-    </div>
-
-    <div class="boks-tekst" id="box5">
+    <div class="boks">
       <h2>Is</h2>
-
       <picture>
-        <source media="(min-width:500px)" srcset="Images/Iskrem/Iskrem_500.jpg 500w,
-                        Images/Iskrem/Iskrem_1000.jpg 1000w,
-                        Images/Iskrem/Iskrem_1500.jpg 1500w">
-
-        <source srcset="Images/Iskrem/Iskrem_mobil_460.jpg 460w,
-                        Images/Iskrem/Iskrem_mobil_1000.jpg 1000w">
-        <img src="Images/Iskrem/Iskrem_mobil_460.jpg" alt="Bilde av en iskrem">
+        <source media="(min-width: 704px)" srcset="/images/Iskrem/Iskrem_orginal.jpg" />
+        <img src="/images/Iskrem/Iskrem_mobil_460.jpg" alt="bildet av en is">
       </picture>
-
-      <p> Det ble spist mye Is i sommer, derfor passer det perfekt å ha med et bilde av is.
-
-      </p>
+      <div class="tekst-boks">
+        <p>Det ble spist mye Is i sommer,
+          derfor passer det perfekt å ha med et bilde av is </p>
+      </div>
     </div>
 
-    <div class="boks-tekst" id="box6">
-      <h2>Skogen</h2>
-
+    <div class="boks">
+      <h2>Konserten</h2>
       <picture>
-        <source media="(min-width:500px)" srcset="Images/Sol i skog/Sol i skog 500.jpg">
-        <source srcset="Images/Sol i skog/Sol i skog beskjært mobil 460.jpg">
-        <img src="Images/Sol i skog/Sol i skog beskjært mobil 460.jpg"
-          alt="Bilde av sollyset som bryter gjennom i en skog">
+        <source media="(min-width: 704px)" srcset="/images/konsert/Konsert-orginal1.jpg" />
+        <img src="/images/konsert/Konsert beskjært mobil 460.jpg" alt="konsert">
       </picture>
 
-      <p> Det her er bildet av en flott skog i Norge. Denne skogen her pleide jeg å gå til når det ble for mye og når
-        jeg trengte å klarere tankene mine i sommerferien.
-      </p>
+      <div class="tekst-boks">
+        <p>
+          Her er det bildet av en konsert jeg var på i summer.
+          Det er bildet av et pop-rock boy band fra Australia. Dette bandet
+          her kom til Telenor arena på starten av sommerferien.
+        </p>
+
+      </div>
+
     </div>
+    <div class="boks">
+      <h2>Skog</h2>
+      <picture>
+        <source media="(min-width: 704px)" srcset="images/Sol i skog/Sol i skog-orginal.jpg">
+        <img src="images/Sol i skog/Sol i skog-mobil.jpg" alt="bildet av skog">
+      </picture>
+      <div class="tekst-boks">
+
+        <p> Det her er bildet av en skog, og tenkte at det passet å ha med bildet av det.
+          Fordi jeg brukte skogen veldig mye i sommerferien og jeg pleier å gå til skogen når det ble for mye og når
+          jeg trengte å klarere tankene mine i sommerferien.
+        </p>
+
+      </div>
+
+    </div>
+    <div class="boks">
+      <h2>Strand</h2>
+      <picture>
+        <source media="(min-width: 704px)" srcset="images/Strand/Strand-orginal.jpg" />
+        <img src="images/Strand/Strand beskjært mobil 460.jpg" alt="Strand">
+      </picture>
+      <div class="tekst-boks">
+        <p> Stranden i Wellfleet, var et av de fineste stedene jeg har besøkt.
+          Havet var blått og det var veldig fint her de dagene vi var på besøk.
+        </p>
+
+      </div>
+
+    </div>
+    <div class="boks">
+      <h2>Kule gutten</h2>
+
+      <picture>
+        <source media="(min-width:704px)" srcset="/images/Surfer/Surfe-orginal.jpg" />
+        <img src="/images/Surfer/Surfe 460.jpg" alt="Surfe-gutt">
+      </picture>
+      <div class="tekst-boks">
+        <p> Her ser dere bildet av storebroren min, på et surfebrett.
+          Dette bildet er tatt på stranden i Wellfleet, Massachusetts
+        </p>
+
+      </div>
+
+    </div>
+    <div class="boks">
+      <h2>Kornåker</h2>
+      <picture>
+        <source media="(min-width: 704px)" srcset="/images/Kornåker/Kornåker-orginal.jpg" />
+        <img src="/images/Kornåker/kornåker-mobil.jpg" alt="Kornåker">
+      </picture>
+
+      <div class="tekst-boks">
+        <p>Bildet av kornåker, denne åkeren
+          ligger i Nord Amerika og er et av stedene vi besøkte på reisen vår i USA.</p>
+
+
+      </div>
+
+    </div>
+
 
   </div>
   <footer>
-    <p>link til wireframe for mobil og pc:</p>
+    <p>Link til wireframe for mobil og pc:</p>
     <a href="/images/wirefram-screen.jpg" alt="Image description" target="_blank">wirefram-screen</a>
     <a href="/images/Wirefram-mobil.jpg" alt="Image description" target="_blank">wirefram-mobil</a>
 
