--- a/reflextion.html
+++ b/reflextion.html
@@ -57,7 +57,7 @@
     var i selve bildestørrelsen. Når vi satte alle bildene i samme størrelse, så klarte vi
     å forandre størrelsen til bildene når skjermen ble større og når skjermen ble
     mindre. Men det som skjedde her var at vi ikke fikk til å forandre på bildestørrelsen til skog bilde. 
-    Vi forandret på bildet og selve størrelsen forandret seg ike. 
+    Vi forandret på bildet og selve størrelsen forandret seg ikke. 
    
      
 
