La til refleksjon siden

--- a/oblig2.html
+++ b/oblig2.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="stylesheet.css">
-  <title>Document</title>
+  <title>Sommer2021</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 
       <div class="tekst-boks">
         <p>
-          Her er det bildet av en konsert jeg var på i summer.
+          Her er det bildet av en konsert jeg var på i sommer.
           Det er bildet av et pop-rock boy band fra Australia. Dette bandet
           her kom til Telenor arena på starten av sommerferien.
         </p>
@@ -52,9 +52,9 @@
       </picture>
       <div class="tekst-boks">
 
-        <p> Det her er bildet av en skog, og tenkte at det passet å ha med bildet av det.
-          Fordi jeg brukte skogen veldig mye i sommerferien og jeg pleier å gå til skogen når det ble for mye og når
-          jeg trengte å klarere tankene mine i sommerferien.
+        <p> Dette er bildet jeg tok av en skog. Denne skogen pleiede jeg å gå til veldig mye i sommerferien, så det
+          passet
+          å ta med bildet av den.
         </p>
 
       </div>
@@ -108,9 +108,11 @@
 
   </div>
   <footer>
+    <p>link til Refleksjon siden:</p>
+    <a href="/reflextion.html" target="_blank">Refleksjon siden</a>
     <p>Link til wireframe for mobil og pc:</p>
-    <a href="/images/wirefram-screen.jpg" alt="Image description" target="_blank">wirefram-screen</a>
-    <a href="/images/Wirefram-mobil.jpg" alt="Image description" target="_blank">wirefram-mobil</a>
+    <a href="/images/wirefram-screen.jpg" alt="bilde av wirefram-screen" target="_blank">wirefram-screen</a>
+    <a href="/images/Wirefram-mobil.jpg" alt="bilde av wirefram-mobil" target="_blank">wirefram-mobil</a>
 
   </footer>
 
