--- a/reflextion.html
+++ b/reflextion.html
@@ -14,14 +14,14 @@
    <p>Før vi startet på siden så lagde vi to forskjellige wireframes,
     den ene for mobil og den andre for lagre screen. Det var flere
     utfordringer som vi møtte på. Den første var hvordan vi skulle
-    implementere bildene fra big screen til liten skjer. Layouten
-    vår for stor skjerm skulle være at tre bilder stod på en rad,
+    implementere bildene fra big screen til liten skjerm. Layouten
+    vår for stor skjerm skulle være at tre og tre bilder var fordelt på to rader,
     men ettersom skjermen ble mindre, så skulle bildene falle under
     hverandre. Til slutt skulle ett og ett bilde ta hele bredden av
     skjermen, og teksten som beskrev dem skulle komme under. Dette
     fikk vi store problemer med, på grunn av at vi ikke skjønte helt
     hvordan vi skulle få to av bildene ned når skjermen ble mindre.
-    Vi fikk bare til å få dem til å bli to etter hverandre.
+    Vi fikk dem bare til å bli to og to under hverandre.
     Vi fikk dette problemet på grunn av at ikke hadde en container div,
     vi hadde bare div-er for selve “iteamesen”. Men når vi lagde containeren
     så klarte vi ikke å få det til slik vi ville ha det heller, men så fant vi ut
@@ -34,9 +34,9 @@
    <p> Da vi skulle implementere siden med hensyn til dens responsive natur så hadde vi ikke så store utfordringer. Dette
     på grunn av at vi brukte flex-boks og dens egenskaper som gjør den ganske så responsive. Men vi hadde en utfordring
     med å endre egenskapene til “p”- elementet og minst en overskrift mellom forskjellige størrelser. Hva enn vi gjorde
-    så fikk vi ikke det til endre noe media aquarien. Til slutt fant vi ut av at vi brukte media queries feil og at vi
+    så fikk vi ikke det til endre noe i media queriesen. Til slutt fant vi ut av at vi brukte media queries feil og at vi
     måtte bruke media(min-width) og ikke start, som var det vi brukte i begynnelsen. Når vi brukte den så fikk vi til å
-    forandre på p og to heading .</p> 
+    forandre på p og second heading (h2).</p> 
 
 <p> Vi bestemte oss først å bruke “picture-taggen fordi når man bruker den så er det du selv som bestemmer hvordan
     bildene blir i de ulike skjerm størrelsene, mens når man bruker img taggen så er det siden selv som bestemmer. Etter
@@ -53,8 +53,8 @@
     videoene med eksempler på Youtube brukte. Men når vi endret på dette, så endret heller ikke bildene. Etter flere
     feilsøking så bestemte vi oss å endre bildestørrelsen til bildene. Det visste seg at problemet vår var i selve
     bildestørrelsen, når vi satte alle bildene i samme størrelse så klarte vi å forandre bildet størrelsen til bildene
-    når skjermen ble større og når skjermen ble mindre. Vi klarte å forandre på alle bildene uten bildestørrelsen til
-    skog bilde, vi satt to forskjellige bildet, men det størrelsen forandret seg ikke.</p>
+    når skjermen ble større og når skjermen ble mindre. Vi klarte å forandre på alle bildene utenom bildestørrelsen til
+    skog-bildet, vi brukte to ulike bilder, men de ville ikke skifte etter størrelsen på nettleseren, noe den skal gjøre som de andre bildene.</p>
 
 
 
