--- a/reflextion.html
+++ b/reflextion.html
@@ -55,6 +55,8 @@
     bildestørrelsen, når vi satte alle bildene i samme størrelse så klarte vi å forandre bildet størrelsen til bildene
     når skjermen ble større og når skjermen ble mindre. Vi klarte å forandre på alle bildene utenom bildestørrelsen til
     skog-bildet, vi brukte to ulike bilder, men de ville ikke skifte etter størrelsen på nettleseren, noe den skal gjøre som de andre bildene.</p>
+    
+    <p>Når vi nå gjør siden Live på GitHub, så sliter vi med at ikke alle bildene vises. Dog var dette ikke et problem når vi bruker Visual Studio code</p>.
 
 
 
