Prøvde å fikse bildene

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h2>Kornåker</h2>
       <picture>
         <source media="(min-width: 704px)" srcset="/images/Kornåker/Kornåker-orginal.jpg" />
-        <img src="/images/Kornåker/kornåker-mobil.jpg" alt="Kornåker">
+        <img src="/images/Kornåker/kornåker_mobil.jpg" alt="Kornåker">
       </picture>
 
       <div class="tekst-boks">
