--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="boks">
       <h2>Is</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="/images/Iskrem/Iskrem_orginal.jpg" />
-        <img src="/images/Iskrem/Iskrem-mobil.jpg" alt="bildet av en is">
+        <source media="(min-width: 704px)" srcset="images/Iskrem/Iskrem_orginal.jpg" />
+        <img src="images/Iskrem/Iskrem-mobil.jpg" alt="bildet av en is">
       </picture>
       <div class="tekst-boks">
         <p>Det ble spist mye Is i sommer,
@@ -30,8 +30,8 @@
     <div class="boks">
       <h2>Konserten</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="/images/konsert/Konsert-orginal1.jpg" />
-        <img src="/images/konsert/Konsert beskjært mobil 460.jpg" alt="konsert">
+        <source media="(min-width: 704px)" srcset="images/konsert/Konsert-orginal1.jpg" />
+        <img src="images/konsert/Konsert beskjært mobil 460.jpg" alt="konsert">
       </picture>
 
       <div class="tekst-boks">
@@ -78,8 +78,8 @@
       <h2>Kule gutten</h2>
 
       <picture>
-        <source media="(min-width:704px)" srcset="/images/Surfer/Surfe-orginal.jpg" />
-        <img src="/images/Surfer/Surfe 460.jpg" alt="Surfe-gutt">
+        <source media="(min-width:704px)" srcset="images/Surfer/Surfe-orginal.jpg" />
+        <img src="images/Surfer/Surfe 460.jpg" alt="Surfe-gutt">
       </picture>
       <div class="tekst-boks">
         <p> Her ser dere bildet av storebroren min, på et surfebrett.
@@ -92,8 +92,8 @@
     <div class="boks">
       <h2>Kornåker</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="/images/Kornåker/Kornåker-orginal.jpg" />
-        <img src="/images/Kornåker/kornåker_mobil.jpg" alt="Kornåker">
+        <source media="(min-width: 704px)" srcset="images/Kornåker/Kornåker-orginal.jpg" />
+        <img src="images/Kornåker/kornåker_mobil.jpg" alt="Kornåker">
       </picture>
 
       <div class="tekst-boks">
@@ -109,10 +109,10 @@
   </div>
   <footer>
     <p>link til Refleksjon siden:</p>
-    <a href="/reflextion.html" target="_blank">Refleksjon siden</a>
+    <a href="reflextion.html" target="_blank">Refleksjon siden</a>
     <p>Link til wireframe for mobil og pc:</p>
-    <a href="/images/wirefram-screen.jpg" alt="bilde av wirefram-screen" target="_blank">wirefram-screen</a>
-    <a href="/images/Wirefram-mobil.jpg" alt="bilde av wirefram-mobil" target="_blank">wirefram-mobil</a>
+    <a href="images/wirefram-screen.jpg" alt="bilde av wirefram-screen" target="_blank">wirefram-screen</a>
+    <a href="images/Wirefram-mobil.jpg" alt="bilde av wirefram-mobil" target="_blank">wirefram-mobil</a>
 
   </footer>
 
