--- a/reflextion.html
+++ b/reflextion.html
@@ -11,22 +11,11 @@
 <body>
         <h1>Option a – From wireframe to page, summer '21</h1>
         <h2>Refleksjon</h2>
-   <p>Før vi startet på siden så lagde vi to forskjellige wireframes,
-    den ene for mobil og den andre for lagre screen. Det var flere
-    utfordringer som vi møtte på. Den første var hvordan vi skulle
-    implementere bildene fra big screen til liten skjerm. Layouten
-    vår for stor skjerm skulle være at tre og tre bilder var fordelt på to rader,
-    men ettersom skjermen ble mindre, så skulle bildene falle under
-    hverandre. Til slutt skulle ett og ett bilde ta hele bredden av
-    skjermen, og teksten som beskrev dem skulle komme under. Dette
-    fikk vi store problemer med, på grunn av at vi ikke skjønte helt
-    hvordan vi skulle få to av bildene ned når skjermen ble mindre.
-    Vi fikk dem bare til å bli to og to under hverandre.
-    Vi fikk dette problemet på grunn av at ikke hadde en container div,
-    vi hadde bare div-er for selve “iteamesen”. Men når vi lagde containeren
-    så klarte vi ikke å få det til slik vi ville ha det heller, men så fant vi ut
-    av hva problemet var. Main taggen hadde havnet etter containeren i
-    kode rekken, dette førte til at div containeren så bare main taggen, og ikke iteamsene, så vi måtte få det bort.
+   <p>Før vi startet på siden så lagde vi to forskjellige wireframes, den ene for mobil og den andre for lagre screen. Det var flere utfordringer som vi møtte på. Den første var hvordan vi skulle implementere bildene fra big screen til liten skjerm. Layouten vår for stor skjerm skulle være at tre og tre bilder var fordelt på to rader,
+    men ettersom skjermen ble mindre, så skulle bildene falle under hverandre. Til slutt skulle ett og ett bilde ta hele bredden av skjermen, og teksten som beskrev dem skulle komme under. Dette fikk vi store problemer med, på grunn av at vi ikke skjønte helt hvordan vi skulle få to av bildene ned når skjermen ble mindre.
+    Vi fikk dem bare til å bli to og to under hverandre. Vi fikk dette problemet på grunn av at ikke hadde en container div,
+    vi hadde bare div-er for selve “iteamesen”. Men når vi lagde containeren så klarte vi ikke å få det til slik vi ville ha det heller, men så fant vi ut
+    av hva problemet var. Main taggen hadde havnet etter containeren i kode rekken, dette førte til at div containeren så bare main taggen, og ikke iteamsene, så vi måtte få det bort.
     Etter det så måtte vi bestemme hvor stor boksen til itemesene skulle være og hvilken størrelse dette skulle endre
     fra “row” til “colums”. Dette gjorde vi ved å bruke media queries, hvor vi satte containeren til columns. Dette
     førte til at vi klarte å få til slik vi ville layouten til liten skjerm skulle være.</p> 
@@ -56,7 +45,7 @@
     når skjermen ble større og når skjermen ble mindre. Vi klarte å forandre på alle bildene utenom bildestørrelsen til
     skog-bildet, vi brukte to ulike bilder, men de ville ikke skifte etter størrelsen på nettleseren, noe den skal gjøre som de andre bildene.</p>
     
-    <p>Når vi nå gjør siden Live på GitHub, så sliter vi med at ikke alle bildene vises. Dog var dette ikke et problem når vi bruker Visual Studio code</p>.
+   
 
 
 
