--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2>Konserten</h2>
       <picture>
         <source media="(min-width: 704px)" srcset="images/konsert/Konsert-orginal1.jpg" />
-        <img src="images/konsert/Konsert beskjært mobil 460.jpg" alt="konsert">
+        <img src="images/konsert/konsert-mobil.jpg" alt="konsert">
       </picture>
 
       <div class="tekst-boks">
