--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="boks">
       <h2>Is</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="images/iskrem/iskrem_orginal.jpg" />
+        <source media="(min-width: 704px)" srcset="Images/Iskrem/Iskrem_orginal.jpg" />
         <img src="images/Iskrem/Iskrem-mobil.jpg" alt="bildet av en is">
       </picture>
       <div class="tekst-boks">
@@ -31,7 +31,7 @@
       <h2>Konserten</h2>
       <picture>
         <source media="(min-width: 704px)" srcset="images/konsert/Konsert-orginal1.jpg" />
-        <img src="images/konsert/konsert-mobil.jpg" alt="konsert">
+        <img src="Images/konsert/Konsert-mobil.jpg" alt="konsert">
       </picture>
 
       <div class="tekst-boks">
@@ -48,7 +48,7 @@
       <h2>Skog</h2>
       <picture>
         <source media="(min-width: 704px)" srcset="images/Sol i skog/Sol i skog-orginal.jpg">
-        <img src="images/Sol i skog/Sol i skog-mobil.jpg" alt="bildet av skog">
+        <img src="Images/Sol i skog/Sol i skog-mobil.jpg" alt="bildet av skog">
       </picture>
       <div class="tekst-boks">
 
@@ -64,7 +64,7 @@
       <h2>Strand</h2>
       <picture>
         <source media="(min-width: 704px)" srcset="images/Strand/Strand-orginal.jpg" />
-        <img src="images/Strand/Strand beskjært mobil 460.jpg" alt="Strand">
+        <img src="images/Strand/Strand-mobil.jpg" alt="Strand">
       </picture>
       <div class="tekst-boks">
         <p> Stranden i Wellfleet, var et av de fineste stedene jeg har besøkt.
@@ -79,7 +79,7 @@
 
       <picture>
         <source media="(min-width:704px)" srcset="images/Surfer/Surfe-orginal.jpg" />
-        <img src="images/Surfer/Surfe 460.jpg" alt="Surfe-gutt">
+        <img src="images/Surfer/Surfer-mobil.jpg" alt="Surfe-gutt">
       </picture>
       <div class="tekst-boks">
         <p> Her ser dere bildet av storebroren min, på et surfebrett.
