--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <div class="boks">
       <h2>Strand</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="images/Strand/Strand-orginal.jpg" />
-        <img src="images/Strand/Strand-mobil.jpg" alt="Strand">
+        <source media="(min-width: 704px)" srcset="images/Strand/orginal.jpg" />
+        <img src="images/Strand/mobil.jpg" alt="Strand">
       </picture>
       <div class="tekst-boks">
         <p> Stranden i Wellfleet, var et av de fineste stedene jeg har besøkt.
@@ -78,8 +78,8 @@
       <h2>Kule gutten</h2>
 
       <picture>
-        <source media="(min-width:704px)" srcset="images/Surfer/Surfe-orginal.jpg" />
-        <img src="images/Surfer/Surfer-mobil.jpg" alt="Surfe-gutt">
+        <source media="(min-width:704px)" srcset="images/Surfer/orginal.jpg" />
+        <img src="images/Surfer/mobil.jpg" alt="Surfe-gutt">
       </picture>
       <div class="tekst-boks">
         <p> Her ser dere bildet av storebroren min, på et surfebrett.
@@ -92,8 +92,8 @@
     <div class="boks">
       <h2>Kornåker</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="images/Kornåker/Kornåker-orginal.jpg" />
-        <img src="images/Kornåker/kornåker_mobil1.jpg" alt="Kornåker">
+        <source media="(min-width: 704px)" srcset="images/Kornåker/orginal.jpg" />
+        <img src="images/Kornåker/mobil.jpg" alt="Kornåker">
       </picture>
 
       <div class="tekst-boks">
