--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2>Skog</h2>
       <picture>
         <source media="(min-width: 704px)" srcset="images/Sol i skog/Sol i skog-orginal.jpg">
-        <img src="Images/Sol i skog/Sol i skog-mobil.jpg" alt="bildet av skog">
+        <img src="images/Sol i skog/Sol i skog-mobil.jpg" alt="bildet av skog">
       </picture>
       <div class="tekst-boks">
 
