--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="boks">
       <h2>Konserten</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="images/konsert/Konsert-orginal1.jpg" />
+        <source media="(min-width: 704px)" srcset="Images/konsert/orginal1.jpg" />
         <img src="Images/konsert/mobil.jpg" alt="konsert">
       </picture>
 
@@ -47,7 +47,7 @@
     <div class="boks">
       <h2>Skog</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="images/Sol i skog/Sol i skog-orginal.jpg">
+        <source media="(min-width: 704px)" srcset="images/Sol i skog/orginal.jpg">
         <img src="images/Sol i skog/orginal.jpg" alt="bildet av skog">
       </picture>
       <div class="tekst-boks">
@@ -63,8 +63,8 @@
     <div class="boks">
       <h2>Strand</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="images/Strand/orginal.jpg" />
-        <img src="images/Strand/mobil.jpg" alt="Strand">
+        <source media="(min-width: 704px)" srcset="Images/Strand/orginal.jpg" />
+        <img src="Images/Strand/mobil.jpg" alt="Strand">
       </picture>
       <div class="tekst-boks">
         <p> Stranden i Wellfleet, var et av de fineste stedene jeg har besøkt.
