--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <div class="boks">
       <h2>Skog</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="images/Sol i skog/orginal.jpg">
-        <img src="images/Sol i skog/orginal.jpg" alt="bildet av skog">
+        <source media="(min-width: 704px)" srcset="Images/Sol i skog/orginal.jpg">
+        <img src="Images/Sol i skog/orginal.jpg" alt="bildet av skog">
       </picture>
       <div class="tekst-boks">
 
@@ -78,8 +78,8 @@
       <h2>Kule gutten</h2>
 
       <picture>
-        <source media="(min-width:704px)" srcset="images/Surfer/orginal.jpg" />
-        <img src="images/Surfer/mobil.jpg" alt="Surfe-gutt">
+        <source media="(min-width:704px)" srcset="Images/Surfer/orginal.jpg" />
+        <img src="Images/Surfer/mobil.jpg" alt="Surfe-gutt">
       </picture>
       <div class="tekst-boks">
         <p> Her ser dere bildet av storebroren min, på et surfebrett.
@@ -92,8 +92,8 @@
     <div class="boks">
       <h2>Kornåker</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="images/Kornåker/orginal.jpg" />
-        <img src="images/Kornåker/mobil.jpg" alt="Kornåker">
+        <source media="(min-width: 704px)" srcset="Images/Kornåker/orginal.jpg" />
+        <img src="Images/Kornåker/mobil.jpg" alt="Kornåker">
       </picture>
 
       <div class="tekst-boks">
