--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <div class="boks">
       <h2>Skog</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="Images/Sol i skog/orginal.jpg">
-        <img src="Images/Sol i skog/orginal.jpg" alt="bildet av skog">
+        <source media="(min-width: 704px)" srcset="Images/Sol i skog/orginal1.jpg">
+        <img src="Images/Sol i skog/orginal1.jpg" alt="bildet av skog">
       </picture>
       <div class="tekst-boks">
 
