--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2>Skog</h2>
       <picture>
         <source media="(min-width: 704px)" srcset="Images/Sol i skog/mobil.jpg">
-        <img src="Images/Sol i skog/orignal1.jpg" alt="bildet av skog">
+        <img src="Images/Sol i skog/orignal.jpg" alt="bildet av skog">
       </picture>
       <div class="tekst-boks">
 
