--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="boks">
       <h2>Skog</h2>
       <picture>
-        <source media="(min-width: 704px)" srcset="Images/Sol i skog/mobil.jpg">
+        <source media="(min-width: 704px)" srcset="Images/Sol i skog/orginal.jpg">
         <img src="Images/Sol i skog/mobil.jpg" alt="bildet av skog">
       </picture>
       <div class="tekst-boks">
